# clicker

./: .env.example  .gitignore  Dockerfile  Dockerfile.web  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/simplemmo_bot/: __init__.py  __main__.py  auth.py  captcha.py  client.py  config.py  quests.py  travel.py
src/simplemmo_bot/web/: __init__.py  app.py  bot_manager.py  database.py
src/simplemmo_bot/web/templates/: accounts.html  base.html  dashboard.html  login.html  logs.html  settings.html
src/simplemmo_bot/web/templates/partials/: account_card.html  controls.html  logs.html  running_bots.html  stats.html  status.html
